tests/ui/bind_col.stderr
error[E0505]: cannot move out of `val` because it is borrowed
  --> $DIR/bind_col.rs:48:10
   |
46 |     SQLBindCol(&stmt, 1, SQL_C_SLONG, Some(&val), None);
   |                                            ---- borrow of `val` occurs here
47 |
48 |     drop(val);
   |          ^^^ move out of `val` occurs here
49 |     SQLFreeHandle(SQL_HANDLE_STMT, stmt);
   |                                    ---- borrow later used here
